# Industry-4.0-v2

./: .env  .gitignore  README.md  generate_batch_data.py  historical_sensor_data.csv  historical_sensor_data.json  init_db.py  main.py  pyproject.toml  quick_test.py  requirements.txt  run_tests.py  simulate_devices.py  test_server.py
ESP Code/MIET_2025_UNO_Motor_control_with_ADC/: MIET_2025_UNO_Motor_control_with_ADC.ino
ESP Code/esp8266_data_to_flask_4_MOTOR_CONTROL_WITH_ADC/: esp8266_data_to_flask_4_MOTOR_CONTROL_WITH_ADC.ino
Ladder Program/: GXWORKS3_MIET_2025_MOTOR_CONTROL_WITH_ADC_1.gx3
ai/: __init__.py  anomaly_detector.py  health_analyzer.py  predictive_model.py  recommendations.py
api/: __init__.py
api/routes/: __init__.py  alerts.py  control.py  health.py  sensor_data.py
api/websocket/: events.py
config/: database.py  settings.py
core/: app_factory.py
data/: motor_monitoring.db
database/: init_db.py  manager.py  models.py
hardware/: __init__.py  base_hardware.py  esp_handler.py  plc_manager.py
models/: anomaly_detector.joblib  anomaly_scaler.joblib
services/: __init__.py  alert_service.py  background_tasks.py  connection_monitor.py  data_processor.py
templates/: dashboard.html
tests/: __init__.py  conftest.py  test_api.py  test_esp_handler.py  test_health_analyzer.py  test_plc_manager.py
utils/: __init__.py  converters.py  helpers.py  logger.py  validators.py
