[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-motor-monitoring"
version = "3.1.0"
description = "AI-Enabled Industrial Motor Health & Environment Monitoring System"
authors = [
    {name = "AI Motor Monitoring Team", email = "team@motormonitoring.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["motor", "monitoring", "ai", "industrial", "iot", "plc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Monitoring"
]

dependencies = [
    "Flask==2.3.2",
    "Flask-SocketIO==5.3.4",
    "SQLAlchemy==2.0.19",
    "pandas==2.0.3",
    "numpy==1.24.3",
    "scikit-learn==1.3.0",
    "pymcprotocol==0.2.0",
    "python-dotenv==1.0.0",
    "pytest==7.4.0",
    "joblib==1.3.1",
    "Werkzeug==2.3.6",
    "python-engineio==4.7.1",
    "python-socketio==5.8.0",
    "psutil==5.9.0",
    "ping3==4.0.4",
    "schedule==1.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0"
]

[project.urls]
Homepage = "https://github.com/ai-motor-monitoring/system"
Repository = "https://github.com/ai-motor-monitoring/system.git"
Documentation = "https://ai-motor-monitoring.readthedocs.io/"
"Bug Tracker" = "https://github.com/ai-motor-monitoring/system/issues"

[project.scripts]
motor-monitor = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai*", "api*", "config*", "core*", "database*", "hardware*", "services*", "utils*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
